--- a/services/package.json
+++ b/services/package.json
@@ -1,20 +1,14 @@
 {
-  "name": "gcp-test",
-  "version": "1.0.0",
-  "description": "testing GCP stuff",
+  "name": "services",
+  "version": "0.1.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jliwill/gcp-test.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jliwill/gcp-test/issues"
-  },
-  "homepage": "https://github.com/jliwill/gcp-test#readme"
+  "author": "serverless.com",
+  "license": "MIT",
+  "devDependencies": {
+    "serverless-google-cloudfunctions": "*"
+  }
 }
