--- a/services/serverless.yml
+++ b/services/serverless.yml
@@ -10,7 +10,7 @@ provider:
   # https://serverless.com/framework/docs/providers/google/guide/credentials/
   #
   # the path to the credentials file needs to be absolute
-  credentials: ~/gcp-test/services/keyfile.json
+  credentials: /workspace/keyfile.json
 
 frameworkVersion: '2'
 
