--- a/services/serverless.yml
+++ b/services/serverless.yml
@@ -5,7 +5,7 @@ provider:
   stage: dev
   runtime: nodejs10
   region: us-central1
-  project: My First Project
+  project: clear-veld-306519 #make sure it is correct
   # The GCF credentials can be a little tricky to set up. Luckily we've documented this for you here:
   # https://serverless.com/framework/docs/providers/google/guide/credentials/
   #
