--- a/services/config/.env.stg
+++ b/services/config/.env.stg
@@ -1,8 +1,3 @@
 # run offline
-ENVIRONMENT=stage
-SLACK_URL=https://hooks.slack.com/services/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
-SLACK_TITLE="LOCAL-C24-Alarms"
-# serverless
-STAGE=stage
-REGION=us-east-1
-MEMORY_SIZE=1024
+SLACK_URL=""
+SLACK_TITLE=""
