--- a/services/serverless.yml
+++ b/services/serverless.yml
@@ -1,5 +1,8 @@
 service: services
 
+custom:
+  dotenv:
+    basePath: ./config/
 provider:
   name: google
   stage: dev
@@ -16,6 +19,7 @@ frameworkVersion: '2'
 
 plugins:
   - serverless-google-cloudfunctions
+  - serverless-dotenv-plugin
 
 # needs more granular excluding in production as only the serverless provider npm
 # package should be excluded (and not the whole node_modules directory)
