--- a/services/cloudbuild.yaml
+++ b/services/cloudbuild.yaml
@@ -13,14 +13,14 @@ steps:
     id: 'Install Serverless framework using npm'
     args: ['install', '-g', 'serverless']
   #run unit test
-  - name: 'gcr.io/cloud-builders/npm'
-    id: 'Run unit tests'
-    entrypoint: bash
-    args:
-      - '-c'
-      - |
-          chmod +x services/run-unit-tests.sh
-          services/run-unit-tests.sh
+  # - name: 'gcr.io/cloud-builders/npm'
+  #   id: 'Run unit tests'
+  #   entrypoint: bash
+  #   args:
+  #     - '-c'
+  #     - |
+  #         chmod +x services/run-unit-tests.sh
+  #         services/run-unit-tests.sh
   #decrypt keyfile.json.enc
   - name: gcr.io/cloud-builders/gcloud
     args:
