--- a/services/cloudbuild.yaml
+++ b/services/cloudbuild.yaml
@@ -28,7 +28,7 @@ steps:
       - decrypt
       - --ciphertext-file=keyfile.json.enc
       - --plaintext-file=keyfile.json
-      - --location=us-central1
+      - --location=us-west2
       - --keyring=${_KEYRING}
       - --key=${_KEY}
   #serverless deploy
@@ -42,6 +42,6 @@ steps:
           npm install
           npx serverless deploy --verbose --env stg 
 substitutions:
-  _KEYRING: projects/clear-veld-306519/locations/us-central1/keyRings/test_keyring
-  _KEY: projects/clear-veld-306519/locations/us-central1/keyRings/test_keyring/cryptoKeys/my_test_key #copy resource name in console GCP KMS
+  _KEYRING: projects/iq-cloud-qa-functionality/locations/us-west2/keyRings/gcp-test
+  _KEY: projects/iq-cloud-qa-functionality/locations/us-west2/keyRings/gcp-test/cryptoKeys/serverless-test #copy resource name in console GCP KMS
  
