--- a/services/serverless.yml
+++ b/services/serverless.yml
@@ -7,8 +7,8 @@ provider:
   name: google
   stage: dev
   runtime: nodejs10
-  region: us-central1
-  project: clear-veld-306519 #use project id
+  region: us-west2
+  project: iq-cloud-qa-functionality #use project id
   # The GCF credentials can be a little tricky to set up. Luckily we've documented this for you here:
   # https://serverless.com/framework/docs/providers/google/guide/credentials/
   #
