--- a/services/cloudbuild.yaml
+++ b/services/cloudbuild.yaml
@@ -46,3 +46,4 @@ steps:
 #   _KEYRING: projects/iq-cloud-qa-functionality/locations/us-west2/keyRings/gcp-test
 #   _KEY: projects/iq-cloud-qa-functionality/locations/us-west2/keyRings/gcp-test/cryptoKeys/serverless-test #copy resource name in console GCP KMS
  
+tags: ['JC2']
